<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/etBits"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="34dp"
        android:layout_marginBottom="335dp"
        android:ems="10"
        android:hint="@string/etBits"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/btnConverter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvConverter"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="585dp"
        android:text="@string/tvConverter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etBits" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvConverter">

        <RadioButton
            android:id="@+id/rbBytes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rbBytes" />

        <RadioButton
            android:id="@+id/rbKB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rbKB" />

        <RadioButton
            android:id="@+id/rbMB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rbMB" />

        <RadioButton
            android:id="@+id/rbGB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rbGB" />

        <RadioButton
            android:id="@+id/rbTB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rbTB" />
    </RadioGroup>

    <Button
        android:id="@+id/btnConverter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/btnConverter"
        app:layout_constraintBottom_toTopOf="@+id/tvRes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etBits" />

    <TextView
        android:id="@+id/tvRes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="215dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnConverter" />

</androidx.constraintlayout.widget.ConstraintLayout>